# hopr-api

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  clean.sh  flake.nix  index.js  package.json  renovate.json  tripetto_form.csv
.cargo/: audit.toml  config.toml
.claude/: INSTRUCTIONS.md  settings.json
.github/: .copilot-instructions.md  CODEOWNERS  actionlint.yaml  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yaml  checks-audit.yaml  checks-cargo-deps.yaml  checks-lint.yaml  checks-pre-commit.yaml  checks-zizmor.yaml  checks.yaml  merge.yaml  open-pr.yaml  pr.yaml  release.yaml  tests.yaml  update-flake-lock.yaml
api/: Cargo.toml
api/src/: lib.rs
api/src/chain/: accounts.rs  channels.rs  keys.rs  mod.rs  tickets.rs  values.rs
api/src/db/: mod.rs
api/src/graph/: costs.rs  traits.rs
api/src/graph/snapshots/: hopr_api__graph__costs__tests__adversarial_peer_good_probes_but_zero_acks.snap  hopr_api__graph__costs__tests__forward_first_edge_negative_when_connected_but_no_intermediate.snap  hopr_api__graph__costs__tests__forward_first_edge_negative_when_connected_intermediate_but_no_capacity.snap  hopr_api__graph__costs__tests__forward_first_edge_negative_when_not_connected.snap  hopr_api__graph__costs__tests__forward_first_edge_penalized_when_no_ack_data.snap  hopr_api__graph__costs__tests__forward_first_edge_positive_when_capacity_only_no_intermediate_probe.snap  hopr_api__graph__costs__tests__forward_first_edge_scales_by_immediate_score.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_negative_when_no_capacity.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_negative_when_no_intermediate.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_positive_when_capacity_only_no_probes.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_scales_by_intermediate_score.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_when_capacity_and_score.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_when_empty.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_when_intermediate_but_no_capacity.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_with_capacity_only_no_probes.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_with_connectivity_no_capacity.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_without_connectivity.snap  hopr_api__graph__costs__tests__forward_last_edge_scales_by_intermediate_score.snap  hopr_api__graph__costs__tests__forward_length_two_intermediate_at_index_one-2.snap  hopr_api__graph__costs__tests__forward_length_two_intermediate_at_index_one.snap  hopr_api__graph__costs__tests__return_first_edge_negative_when_no_capacity.snap  hopr_api__graph__costs__tests__return_first_edge_positive_when_capacity_only_no_probes.snap  hopr_api__graph__costs__tests__return_first_edge_positive_with_full_data.snap  hopr_api__graph__costs__tests__return_first_edge_positive_with_intermediate_and_capacity.snap  hopr_api__graph__costs__tests__return_intermediate_edge_positive_when_capacity_only_no_probes.snap  hopr_api__graph__costs__tests__return_last_edge_penalized_when_connected_but_zero_score.snap  hopr_api__graph__costs__tests__return_last_edge_positive_when_connected_with_empty_intermediate.snap  hopr_api__graph__costs__tests__return_last_edge_rejected_when_ack_rate_below_threshold.snap  hopr_api__graph__costs__tests__return_last_edge_requires_connectivity-2.snap  hopr_api__graph__costs__tests__return_last_edge_requires_connectivity.snap  hopr_api__graph__costs__tests__symmetrical_bidirectional_both_paths_positive.snap  hopr_api__graph__costs__tests__symmetrical_forward_path_works_with_forward_cost_fn.snap  hopr_api__graph__costs__tests__symmetrical_forward_without_self_loopback_works_with_forward_cost_fn.snap  hopr_api__graph__costs__tests__symmetrical_return_path_works_with_return_cost_fn.snap
api/src/node/: mod.rs
api/src/tickets/: mod.rs
hopr-api/: package.json
hopr-api/__tests__/: fetchVideo.test.js
hopr-api/pages/api/: fetchVideo.js  pokeWeights.js
hopr-api/utils/: constants.js
nix/: setup-hook-darwin.sh
src/: lib.rs
src/chain/: accounts.rs  channels.rs  events.rs  mod.rs  safe.rs  values.rs
src/ct/: mod.rs  traits.rs
src/graph/: costs.rs  function.rs  mod.rs  traits.rs  types.rs
src/graph/snapshots/: hopr_api__graph__costs__tests__forward_cost_fn_invariants.snap  hopr_api__graph__costs__tests__forward_first_edge_negative_when_connected_intermediate_but_no_capacity.snap  hopr_api__graph__costs__tests__forward_first_edge_positive_when_connected_with_capacity.snap  hopr_api__graph__costs__tests__forward_first_edge_rejected_when_ack_rate_below_threshold.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_negative_when_empty.snap  hopr_api__graph__costs__tests__forward_intermediate_edge_negative_when_no_intermediate.snap  hopr_api__graph__costs__tests__forward_last_edge_differs_from_return_last_edge.snap  hopr_api__graph__costs__tests__forward_last_edge_positive_with_capacity_only_no_probes.snap  hopr_api__graph__costs__tests__forward_negative_initial_cost_inverts_rejection.snap  hopr_api__graph__costs__tests__return_first_edge_negative_when_empty.snap  hopr_api__graph__costs__tests__return_first_edge_scales_by_intermediate_score.snap  hopr_api__graph__costs__tests__return_last_edge_penalized_when_connected_but_zero_score.snap  hopr_api__graph__costs__tests__return_last_edge_positive_when_connected_with_empty_intermediate.snap  hopr_api__graph__costs__tests__symmetrical_forward_without_self_loopback_works_with_forward_cost_fn.snap  hopr_api__graph__costs__tests__symmetrical_return_path_rejected_by_forward_cost_fn.snap  (+40 more)
src/network/: mod.rs  traits.rs  types.rs
src/node/: accessors.rs  chain.rs  events.rs  incentive.rs  incentives.rs  mod.rs  network.rs  session.rs  session_server.rs  state.rs  status.rs  tickets.rs  transport.rs  types.rs
src/node/session/: client.rs  mod.rs  server.rs
src/tickets/: mod.rs
(+1 files in other folders)
