[package]
name = "hopr-api"
version = "0.12.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "hopr-lib API — common high-level API traits for the HOPR protocol"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hopr-api"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
full = [
  "chain",
  "ct",
  "db",
  "network",
  "graph",
  "node",
  "serde",
  "types-internal",
  "types-chain",
  "types-random",
  "types-fixed-rng",
]
chain = ["db", "types-chain", "dep:auto_impl"]
ct = []
db = []
network = []
graph = ["dep:auto_impl"]
node = ["chain", "db", "graph", "network", "dep:atomic_enum"]
serde = ["hopr-types/serde"]
types-random = ["hopr-types/random"]
types-fixed-rng = ["hopr-types/fixed-rng"]
types-chain = ["hopr-types/chain"]
types-internal = ["hopr-types/internal"]

[dependencies]
async-trait = { workspace = true }
auto_impl = { workspace = true, optional = true }
atomic_enum = { workspace = true, optional = true }
chrono = { workspace = true }
futures = { workspace = true }
libp2p-identity = { workspace = true }
multiaddr = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-types = { workspace = true, features = ["crypto", "primitive", "rayon"] }

[dev-dependencies]
insta = { workspace = true }
