[package]
name = "hopr-api"

description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
full = [
  "chain",
  "ct",
  "db",
  "network",
  "graph",
  "node",
  "serde",
  "tickets",
  "types-chain",
  "types-random",
  "types-fixed-rng",
]
chain = ["db", "types-chain", "dep:auto_impl"]
ct = []
db = ["dep:auto_impl"]
network = []
graph = ["dep:auto_impl"]
node = ["chain", "db", "graph", "network", "dep:atomic_enum"]
serde = ["hopr-types/serde", "dep:serde"]
tickets = ["chain", "dep:auto_impl"]
types-random = ["hopr-types/random"]
types-fixed-rng = ["hopr-types/fixed-rng"]
types-chain = ["hopr-types/chain"]
types-internal = ["hopr-types/internal"]

[dependencies]
async-trait = { workspace = true }
auto_impl = { workspace = true, optional = true }
atomic_enum = { workspace = true, optional = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-concurrency = { workspace = true }
libp2p-identity = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-types = { workspace = true, features = [
  "crypto",
  "internal",
  "primitive",
  "rayon",
] }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
